add project1 files + cache is fixed somehow #1